# routes/api.php
@@ -15,7 +15,7 @@ use Illuminate\Http\Request;
 Route::group([
     'middleware' => 'api',
 ], function ($router) {
-    Route::apiResource('peoples','Api\PeopleController');
+    Route::apiResource('people','Api\PeopleController');
     Route::get('languages','Api\LanguageController@index');
     Route::get('levels','Api\LevelController@index');
     Route::get('courses','Api\CourseController@index');
